 * Disable password auto-completion on user creation form (Samir Shah)
 * Upgrade jQuery to version 3.5.1 to reduce penetration testing false positives (Matt Westcott)
 * Add ability to extend `EditHandler` without a children attribute (Seb Brown)
 * `Page.objects.specific` now gracefully handles pages with missing specific records (Andy Babic)
 * Fix: Support IPv6 domain (Alex Gleason, Coen van der Kamp)
 * Fix: Ensure link to add a new user works when no users are visible in the users list (LB (Ben Johnston))
 * Fix: `AbstractEmailForm` saved submission fields are now aligned with the email content fields, `form.cleaned_data` will be used instead of `form.fields` (Haydn Greatnews)
 * Fix: Removed ARIA `role="table"` from TableBlock output (Thibaud Colas)
 * Fix: Set Cache-Control header to prevent page preview responses from being cached (Tomas Walch)
 * Fix: Accept unicode characters in slugs on the "copy page" form (François Poulain)
 * Fix: Remove top padding when `FieldRowPanel` is used inside a `MultiFieldPanel` (Jérôme Lebleu)
 * Fix: Add Wagtail User Bar back to page previews and ensure moderation actions are available (Coen van der Kamp)
 * Fix: Resolve issue where queryset annotations were lost (e.g. `.annotate_score()`) when using specific models in page query (Dan Bentley)
 * Fix: Prevent date/time picker from losing an hour on losing focus when 12-hour times are in use (Jacob Topp-Mugglestone)
 * Fix: Strip out HTML tags from `RichTextField` & `RichTextBlock` search index content (Timothy Bautista)
 * Fix: Avoid using null on string `Site.site_name` blank values to avoid different values for no name (Coen van der Kamp)
 * Fix: Fix deprecation warnings on Elasticsearch 7 (Yngve Høiseth)
 * Fix: Remove use of Node.forEach for IE 11 compatibility in admin menu items (Thibaud Colas)
 * Fix: Fix incorrect method name in SiteMiddleware deprecation warning (LB (Ben Johnston))