@@ -64,6 +64,7 @@ Other features
  * Upgrade jQuery to version 3.5.1 to reduce penetration testing false positives (Matt Westcott)
  * Add ability to extend ``EditHandler`` without a children attribute (Seb Brown)
  * ``Page.objects.specific`` now gracefully handles pages with missing specific records (Andy Babic)
+ * StreamField 'add' buttons are now disabled when maximum count is reached (Max Gabrielsson)
 
 
 Bug fixes
